compiler/testData/diagnostics/tests/varargs/unresolvedVarargType.fir.kt
// RUN_PIPELINE_TILL: SOURCE
fun testVarArgs(vararg v: <!UNRESOLVED_REFERENCE!>Smth<!>) {}
